<resources>
    <string name="app_name">OrderNow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="owner_full_name_default">Owner Full Name</string>

    <string name="add_profile_info">Add Profile Information</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="attach_profile_picture">Add Profile Picture</string>
    <string name="add_profile">Add Profile</string>
    <string name="uploading_profile_image">Profile Image is uploading...</string>
    <string name="upload_profile_success">Profile Image Uploaded</string>
    <string name="upload_profile_failed">Profile Image Upload Failed</string>
    <string name="fetch_url_failed">Failed to get download URL</string>
    <string name="food_choices_scrollview_content_description" />
    <string name="firebaseApiKey">AIzaSyBN83ePWwtBmmjtt3Z7Zc41McQ8jnmA5JE</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payment_overview_text">
        Welcome to the Payment Settings section of our app. Here, you can get a quick snapshot of your current payment setup, including your default payment methods and billing information. This overview provides a consolidated view of all your payment-related settings, ensuring you have everything in one place for easy management.\n\n
        What you can do here:\n\n
        • Review Payment Methods: View and manage your active payment methods, including credit/debit cards and other payment options.\n
        • Check Billing Information: Ensure that your billing details are accurate and up-to-date.\n\n
        Stay on top of your payment settings to ensure a smooth and seamless experience with our app. For detailed changes or updates, navigate to the Billing and Payment Details sections.
    </string>
    <string name="change_password">Change Password</string>
    <string name="add_menu_item_picture">Add menu item photo</string>
</resources>
