<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themecolor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.BusinessSignUp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_gravity="left"
        android:background="#36B5FF"
        android:src="@drawable/back_arrow"
        android:contentDescription="Go back" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="662dp"
            android:layout_height="310dp"
            android:layout_marginTop="-100dp"
            android:src="@drawable/onlogo" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Create Business account"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <!-- First Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/OwnerFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/OwnerLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <!-- Signup Button -->
        <Button
            android:id="@+id/BusinessSignupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            android:textColor="@color/black" />

        <!-- Login Button -->
        <Button
            android:id="@+id/Businesslogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
